fix: login process in backend
