# packages/shared/src/lib/types/http-request/oauth-callback.type.ts
@@ -1,4 +1,6 @@
 export interface OauthCallbackRequestQuery {
   code: string;
   state: string;
+  locale: string;
+  userState: string;
 }
